[tool.poetry]
name = "intermine_compose"
version = "0.1.0"
description = "Intermine Compose"
authors = ["Ankur Kumar <ank@leoank.me>"]
license = "GNU LGPLv2.1"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.22.0"
environs = "^7.4.0"
logzero = "^1.5.0"
psycopg2-binary = "^2.8.5"
sendgrid = "^6.3.1"
fastapi = "^0.61.1"
uvicorn = "^0.11.5"
celery = "^4.4.6"
kubernetes = "^11.0.0"
peewee = "^3.13.3"
passlib = "^1.7.2"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
pydantic = "^1.6.1"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1 "
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.761"
pytype = {version = "^2020.1.8", python = "3.7"}
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
xdoctest = "^0.11.0"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.15"
pre-commit = "^2.2.0"
nox = "2019.11.9"
sqlalchemy-stubs = "^0.3"
factory-boy = "^2.12.0"
webtest = "^2.0.35"

[tool.poetry.scripts]
intermine_compose = "intermine_compose.cli.main:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["intermine_compose"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
